# DizGref-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
examples/: array_example.c  audio_example.c  basic_example.c  multi_window_example.c  scene_2d_example.c  scene_example.c
resources/: frag_buffer1.glsl  frag_main.glsl  frag_mesh.glsl  frag_post_process.glsl  vert.glsl  vert_mesh.glsl
resources/examples/scene_example/: borders.glsl  button.glsl  panel.glsl  render_buffer_frag.glsl
resources/shaders/: default_vert.glsl  render_buffer_vert.glsl  render_quad_vert.glsl  scene_2d_output_frag.glsl  scene_3d_output_frag.glsl
src/: ce_array.h  ce_audio.c  ce_audio.h  ce_gl.c  ce_gl.h  ce_math.c  ce_math.h  ce_render.c  ce_render.h  ce_types.h  dg_audio.c  dg_audio.h  dg_gl.c  dg_gl.h  dg_math.c  dg_math.h  dg_render.c  dg_render.h  dg_types.h  se_array.h  se_audio.c  se_audio.h  se_gl.c  se_gl.h  se_math.c  se_math.h  se_render.c  se_render.h  se_scene.c  se_scene.h  se_types.h  se_window.c  se_window.h
